-- Copyright (C) 2024 - present Juergen Zimmermann, Hochschule Karlsruhe
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU General Public License as published by
-- the Free Software Foundation, either version 3 of the License, or
-- (at your option) any later version.
--
-- This program is distributed in the hope that it will be useful,
-- but WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-- GNU General Public License for more details.
--
-- You should have received a copy of the GNU General Public License
-- along with this program.  If not, see <https://www.gnu.org/licenses/>.

-- https://docs.oracle.com/en/database/oracle/oracle-database/23/sqlrf/CREATE-TABLE.html
-- https://docs.oracle.com/en/database/oracle/oracle-database/23/sqlrf/Data-Types.html
CREATE TABLE IF NOT EXISTS buch (
                  -- impliziter Index als B-Baum
                  -- 10 Stellen, davon 0 Nachkommastellen
    id            NUMBER(10,0) GENERATED BY DEFAULT ON NULL AS IDENTITY(START WITH 1000) PRIMARY KEY,
    version       NUMBER(3,0) NOT NULL,
    isbn          VARCHAR2(17) NOT NULL,
    rating        NUMBER(1,0) NOT NULL CONSTRAINT buch_rating CHECK (rating >= 0 AND rating <= 5),
    art           VARCHAR2(12) CONSTRAINT buch_art CHECK (art in ('DRUCKAUSGABE', 'KINDLE')),
    preis         NUMBER(8,2) NOT NULL,
    rabatt        NUMBER(4,3) NOT NULL,
                  -- boolean gibt es ab Oracle 23, wird aber von TypeORM nicht unterstuetzt
    lieferbar     NUMBER(1,0) NOT NULL CONSTRAINT buch_lieferbar CHECK (lieferbar = 0 OR lieferbar = 1),
    datum         DATE,
    homepage      VARCHAR2(40),
    schlagwoerter VARCHAR2(64),
    erzeugt       TIMESTAMP,
    aktualisiert  TIMESTAMP
);

-- https://docs.oracle.com/en/database/oracle/oracle-database/23/sqlrf/CREATE-INDEX.html
CREATE UNIQUE INDEX IF NOT EXISTS buch_isbn_idx ON buch(isbn);

CREATE TABLE IF NOT EXISTS titel (
    id          NUMBER(10,0) GENERATED BY DEFAULT ON NULL AS IDENTITY(START WITH 1000) PRIMARY KEY,
    titel       VARCHAR2(40) NOT NULL,
    untertitel  VARCHAR2(40),
    buch_id     NUMBER(10,0) NOT NULL REFERENCES buch
);

CREATE UNIQUE INDEX IF NOT EXISTS titel_buch_id_idx ON titel(buch_id);
CREATE INDEX IF NOT EXISTS titel_titel_idx ON titel(titel);

CREATE TABLE IF NOT EXISTS abbildung (
    id           NUMBER(10,0) GENERATED BY DEFAULT ON NULL AS IDENTITY(START WITH 1000) PRIMARY KEY,
    beschriftung VARCHAR2(32) NOT NULL,
    content_type VARCHAR2(16) NOT NULL,
    buch_id      NUMBER(10,0) NOT NULL REFERENCES buch
);

CREATE INDEX IF NOT EXISTS abbildung_buch_id_idx ON abbildung(buch_id);
